# dvc_classification

./: .gitignore  README.md  dvc.yaml  metrics.json  params.yaml  pyproject.toml  split.py
.dvc/: config
data/: .gitignore  iris.asdf.dvc  raw.asdf  test.npz  train.npz
models/: .gitignore  logistic.pkl
scripts/: evaluate.py  get_raw_data.py  train.py
