[project]
name = "dvc_classification"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Conor McGrory",email = "cpmcgrory@gmail.com"},
]
dependencies = [
    "numpy>=1.26.3",
    "scipy>=1.11.4",
    "matplotlib>=3.8.2",
    "scikit-learn>=1.3.2",
    "ipykernel>=6.28.0",
    "asdf>=3.0.1",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
